Add join_info page

--- a/src/style/intro.scss
+++ b/src/style/intro.scss
@@ -20,7 +20,7 @@
                 width: 600px;
                 margin: 0;
                 text-align: left;
-                font-size: 26px;
+                font-size: 28px;
                 margin-bottom: 12px;
             }
             p{
@@ -49,9 +49,10 @@
                 text-align: center;
                 transition: .5s;
                 border-radius: 15px;
-                width: 55%;
-                padding: .3em 0;
+                width: 50%;
+                padding: .4em 0;
                 color: #34dfa0;
+                letter-spacing: 1.2pt
             }
         }
     }
