--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -22,7 +22,8 @@ html, body {
 
 
 // custom
-@import './landing.scss';
-@import './intro.scss';
-@import './join_info.scss';
+@import 'landing.scss';
+@import 'intro.scss';
+@import 'join_info.scss';
 @import 'schedule.scss';
+@import 'staff.scss'
