--- a/src/style/intro.scss
+++ b/src/style/intro.scss
@@ -16,13 +16,25 @@
             text-shadow: 0px 0px 15px #904bf4;
             color: #eeecff;
 
-            h1{
-                width: 600px;
-                margin: 0;
-                text-align: left;
-                font-size: 28px;
+            .title_block {
+                display: inline-block;
                 margin-bottom: 12px;
+                overflow: hidden;
+                .mask {
+                    width: 100%;
+                    height: 105%;
+                    position: absolute;
+                    background-color: $light-green;
+                    z-index: 1;
+                }
+
+                h1{
+                    margin: 0;
+                    text-align: left;
+                    font-size: 28px;
+                }
             }
+
             p{
                 font-size: 18px;
                 margin: 0;
