--- a/src/style/intro.scss
+++ b/src/style/intro.scss
@@ -1,6 +1,6 @@
-// every style of intro page should be put in #particles_container
+// every style of intro page should be put in #intro
 
-#particles_container{
+#intro{
     margin-top: 6em;
 
     .content_1{
@@ -15,6 +15,7 @@
             position: relative;
             text-shadow: 0px 0px 15px #904bf4;
             color: #eeecff;
+            background-color: #0e0b28;
 
             .title_block {
                 display: inline-block;
