Update landing animation

--- a/src/style/intro.scss
+++ b/src/style/intro.scss
@@ -13,7 +13,7 @@
             text-align: justify;
             letter-spacing: $letter-spacing;
             position: relative;
-            text-shadow: 0px 0px 15px #904bf4;
+            text-shadow: 0px 0px 15px rgba(#ebebeb, 0.78);
             color: #eeecff;
             background-color: #0e0b28;
 
