--- a/src/style/join_info.scss
+++ b/src/style/join_info.scss
@@ -7,7 +7,7 @@
         .partical {
             margin-bottom: 8em;
             text-align: justify;
-            text-shadow: 0px 0px 15px #904bf4;
+            text-shadow: 0px 0px 15px rgba(#ebebeb, 0.78);
             color: #eeecff;
 
             h1 {
