--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,6 +1,6 @@
 * {
     position: relative;
-    font-family: 'Quicksand', sans-serif, 微軟正黑體;
+    font-family: 'Quicksand', '微軟正黑體', sans-serif;
 
 }
 html, body {
