--- a/src/style/join_info.scss
+++ b/src/style/join_info.scss
@@ -9,6 +9,7 @@
             text-align: justify;
             text-shadow: 0px 0px 15px rgba(#ebebeb, 0.78);
             color: #eeecff;
+            padding: 0 1em;
 
             h1 {
                 font-size: 28px;
@@ -56,5 +57,21 @@
 
         }
 
+    }
+    @media all and (max-width: 480px) {
+        .partical {
+            h1 {
+                font-size: 26px!important;
+            }
+            p {
+                font-size: 16px!important;
+            }
+        }
+        ul {
+            padding: 0 .8em!important;
+            li {
+                font-size: 16px!important;
+            }
+        }
     }
 }
