--- a/src/style/sponsor.scss
+++ b/src/style/sponsor.scss
@@ -1,16 +1,21 @@
 #sponsor {
     color: #f7f7f7;
-
+    .BG {
+        background-image: url("https://i.imgur.com/chS90KT.png");
+        width: 100%; height: 100%;
+        position: fixed;
+        top: 0;
+    }
     .intro {
-        top: 180px;
+        margin-top: 180px;
     }
 
     .planet {
-        position: absolute;
+        position: fixed;
         width: 700px;
         left: -20px;
         top: -30px;
-        filter: drop-shadow(0px 0px 50px rgba(#8ec6ff, 0.4))  brightness(1.15)  blur(.5px);
+        filter: drop-shadow(0px 0px 50px rgba(#fffa8e, 0.4))  brightness(1.15)  blur(.5px);
 
         img {
             width: 100%;
@@ -26,14 +31,52 @@
             color: $light-green;
             font-weight: 900;
         }
-        h3 {
-            font-size: 25px;
-            margin-bottom: .3em;
-        }
-        p {
-            text-align: justify;
-            font-size: 18px;
-            margin-bottom: 1.6em;
+        .part {
+            margin-bottom: 3.6em;
+            .en_article {
+                text-align: left;
+            }
+            h3 {
+                font-size: 25px;
+                margin-bottom: .6em;
+                border-bottom: solid 1px white;
+                padding-bottom: 1.6px;
+            }
+            p {
+                text-align: justify;
+                font-size: 17px;
+                margin-bottom: 1.6em;
+                font-weight: 300;
+            }
+            a {
+                color: $light-green;
+                overflow-wrap: break-word;
+            }
+            ul {
+                list-style-position: outside;
+                padding: 0;
+                li {
+                    margin-bottom: 1.2em;
+                    font-size: 17px;
+                }
+            }
+            table {
+                width: 120%;
+                tr {
+                    text-align: center;
+                    font-size: 14px;
+                    th {
+                        border: solid 1px white;
+                        min-width: 2.6em;
+                        padding: 0px;
+                    }
+                    td {
+                        border: solid 1px white;
+                        padding: 5px;
+                        vertical-align: top;
+                    }
+                }
+            }
         }
     }
 }
