--- a/src/style/sponsor.scss
+++ b/src/style/sponsor.scss
@@ -1,10 +1,24 @@
 #sponsor {
     color: #f7f7f7;
     .BG {
-        background-image: url("https://i.imgur.com/chS90KT.png");
+        background-image: url("https://i.imgur.com/xRLeODk.png");
         width: 100%; height: 100%;
         position: fixed;
         top: 0;
+        background-size: cover;
+    }
+    .return {
+        width: 80px;
+        padding: 5px;
+        position: fixed;
+        right: 2%;
+        top: 2%;
+        border: solid 2px $light-green;
+        border-radius: 10px;
+        text-align: center;
+        img {
+            width: 50%;
+        }
     }
     .intro {
         margin-top: 180px;
