--- a/src/style/join_info.scss
+++ b/src/style/join_info.scss
@@ -52,6 +52,10 @@
 
                 li {
                     margin-bottom: 1.6em;
+                    a {
+                        color: $light_green;
+                        text-decoration: none;
+                    }
                 }
             }
 
