--- a/src/style/sponsorlist.scss
+++ b/src/style/sponsorlist.scss
@@ -25,6 +25,9 @@
     }
     .sponsorRow {
       margin-bottom: 50px;
+      img {
+          // width: 100%;
+      }
     }
     ul {
         display: flex;
