--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,6 +1,6 @@
 * {
     position: relative;
-    font-family: 'Quicksand', '微軟正黑體', sans-serif;
+    font-family: 'Quicksand', '微軟正黑體', sans-serif!important;
 
 }
 html, body {
@@ -33,3 +33,4 @@ $light-green: #1DCB8B;
 @import 'staff.scss';
 @import "sponsor.scss";
 @import "sponsorlist.scss";
+@import "footer.scss";
